# rust-engine

./: .claude_project  .gitignore  CLAUDE.md  CONDUCTOR-TAGS.md  CONDUCTOR.md  Cargo.toml  README.md  SQUASH_MSG.md  build.rs  cargo_err.txt  conductor.yaml  editor_layout.ron  test_axis_norm.rs  window_config.ron
.claude/: hooks.json  settings.json  settings.local.json
.conductor/: conductor.db
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml
assets/scenes/: demo.scene.ron  main.scene.ron
content/: Defeated (1).mesh.ron  Defeated.anim  Defeated.fbx  Defeated.mesh.ron  Defeated_Beta_HighLimbsGeoSG3.material.ron  Defeated_Beta_Joints_MAT1.material.ron  NewMappingContext.mappingcontext.ron  Shoot.inputaction.ron  Shoot.ron
content/models/: Duck.glb  Duck.mesh  Duck.mesh.ron  Duck_blinn3-fx.material.ron
content/scenes/: benchmark.scene.ron  main.scene.ron
crates/emath-patched/src/: smart_aim.rs
crates/transform-gizmo-fork/crates/transform-gizmo/: Cargo.toml
crates/transform-gizmo-fork/crates/transform-gizmo/src/: config.rs  gizmo.rs  shape.rs
crates/transform-gizmo-fork/crates/transform-gizmo/src/subgizmo/: arcball.rs  common.rs  rotation.rs  scale.rs
docs/: ARCHITECTURE.md  DECISIONS.md  FLAGS.md  KNOWLEDGE.md
docs/roadmap/: VULKANO-28-AUTOMATED-TESTING.md
engine/: Cargo.toml
engine/examples/: ecs_systems.rs  scene_serialization.rs  test_gbuffer.rs
engine/src/: lib.rs
engine/src/engine/: mod.rs  plugin.rs
engine/src/engine/assets/: asset_manager.rs  asset_type.rs  content_root.rs  handle.rs  hot_reload.rs  mesh_import.rs  mod.rs  model_loader.rs  model_loader_fbx.rs  model_loader_gltf.rs  model_loader_obj.rs  model_manager.rs  pak.rs  texture.rs
engine/src/engine/audio/: components.rs  debug_draw.rs  engine.rs
engine/src/engine/benchmark/: config.rs  mod.rs  profile.rs  report.rs  scene.rs
engine/src/engine/camera/: camera_2d.rs  mod.rs
engine/src/engine/core/: mod.rs  swapchain.rs
engine/src/engine/debug_draw/: api.rs  mod.rs
engine/src/engine/ecs/: components.rs  events.rs  hierarchy.rs  mod.rs  plankton_debug_draw.rs  schedule.rs  system_names.rs
engine/src/engine/editor/: hierarchy_panel.rs  icons.rs  import_dialog.rs  input_action_editor.rs  input_context_editor.rs  inspector_panel.rs  menu_bar.rs  mod.rs  play_mode.rs  secondary_window.rs  tab_viewer.rs  viewport_texture.rs
engine/src/engine/editor/asset_browser/: events.rs  mod.rs  thumbnail.rs
engine/src/engine/editor/asset_browser/views/: folder_tree.rs  grid_view.rs  list_view.rs  mod.rs
engine/src/engine/editor/console_cmd/: context.rs  registry.rs
engine/src/engine/editor/profiler/: budget.rs  flamegraph.rs  scope_colors.rs  table_view.rs
engine/src/engine/editor/viewport/: camera_controller.rs  gizmo_handler.rs  mod.rs
engine/src/engine/gui/: mod.rs
engine/src/engine/input/: action_map.rs  action_state.rs  enhanced_serialization.rs  input_manager.rs  key_convert.rs  modifier.rs  serialization.rs  subsystem.rs  system.rs
engine/src/engine/math/: aabb.rs  frustum.rs  mod.rs
engine/src/engine/physics/: components.rs  events.rs  world.rs
engine/src/engine/rendering/: frame_packet.rs  mod.rs  pipeline_registry.rs  render_thread.rs  shader_compiler.rs
engine/src/engine/rendering/2d/: mod.rs  sprite_batch.rs
engine/src/engine/rendering/3d/: material.rs  material_manager.rs  mesh.rs  mesh_manager.rs  mod.rs  shadow.rs  skinning.rs
engine/src/engine/rendering/3d/deferred/: bloom_pass.rs  composite_pass.rs  deferred_renderer.rs  gbuffer.rs  geometry_pass.rs  lighting_pass.rs  luminance_pass.rs  mod.rs  shaders.rs  shadow_pass.rs  ssao_pass.rs
engine/src/engine/rendering/3d/deferred/plankton/: emit_pass.rs  init_pass.rs  mod.rs  noise.rs  pool.rs  render_pass.rs  simulate_pass.rs  system.rs
engine/src/engine/rendering/common/: depth_buffer.rs  framebuffer.rs  gpu_context.rs  mod.rs  renderer.rs
engine/src/engine/rendering/graph/: mod.rs  pass_node.rs  render_graph.rs  resource.rs  resource_pool.rs
engine/src/engine/rendering/shaders/2d/: camera_vs.glsl  textured_vs.glsl  transform_fs.glsl  transform_vs.glsl
engine/src/engine/rendering/shaders/3d/: lit_mesh_vs.glsl  mesh_fs.glsl  mesh_vs.glsl  pbr_fs.glsl  thumbnail_fs.glsl
engine/src/engine/rendering/shaders/deferred/: bloom_downsample.frag  bloom_threshold.frag  bloom_upsample.frag  composite.frag  composite.vert  gbuffer.frag  gbuffer.vert  grid.frag  lighting.frag  lighting.vert  luminance.frag  ssao.frag  ssao_blur.frag
engine/src/engine/rendering/shaders/plankton/: plankton_emit.comp  plankton_init.comp  plankton_render.frag  plankton_render.vert  plankton_simulate.comp
engine/src/engine/scene/: animation.rs  animation_state.rs  mod.rs  prefab.rs  scene_format.rs  scene_serializer.rs
engine/src/engine/utils/: game_loop.rs  math_convert.rs  mod.rs  window_config.rs
engine/tests/: play_mode.rs  serialization_roundtrip.rs
engine/tests/common/: mod.rs
examples/: asset_management_demo.rs  ecs_demo.rs  ecs_systems.rs  scene_serialization.rs
game_client/: Cargo.toml
game_client/src/: app.rs  benchmark_runner.rs  game_setup.rs  input_handler.rs  main.rs  plugin.rs  render_loop.rs  standalone.rs
game_client/src/systems/: character_movement.rs  command_executor.rs  mod.rs  player_input.rs
game_shared/: Cargo.toml
game_shared/src/: commands.rs  components.rs
scripts/: export_windows.ps1  export_windows.sh
src/: lib.rs  main.rs
src/engine/: camera.rs  coords.rs  framebuffer.rs  game_loop.rs  input.rs  logical_device.rs  mesh.rs  mesh_manager.rs  mod.rs  model_loader.rs  physical_device.rs  pipeline.rs  render_pass.rs  renderer.rs  scene.rs  sprite_batch.rs  swapchain.rs  texture.rs  vulkan_context.rs  window.rs
src/engine/adapters/: mod.rs  physics_adapter.rs  render_adapter.rs
src/engine/animation/: components.rs  mod.rs  (+3 more)
src/game/: app.rs  benchmark_runner.rs  game_setup.rs  gui_panel.rs  input_handler.rs  main.rs  mod.rs  render_loop.rs  standalone.rs
src/tools/: pak_tool.rs
tests/: scene_smoke.rs  serialization_roundtrip.rs
tools/pak_tool/: Cargo.toml
(+172 files in other folders)
