[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
tracy = ["tracy-client"]

# Define both library and binary
[lib]
name = "rust_engine"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/game/main.rs"


[dependencies]
# Window and event handling
winit = "0.30"

# Vulkano - Safe Vulkan wrapper
vulkano = "0.35"

# Shader compilation at build time
vulkano-shaders = "0.35"

# vulkano-win removed - deprecated, Surface::from_window now works with winit 0.30

# Math library
glam = { version = "0.29", features = ["serde"] }

# Image loading (for textures later)
image = "0.25"
bytemuck = "1.24.0"

gltf = "1.4"

# Small vector optimization
smallvec = "1.13"

# ECS
hecs = "0.10"

# File watching for hot-reload
notify = "6.1"

# Thread-safe locking primitives
parking_lot = "0.12"

# Math library (nalgebra for glm-style functions)
nalgebra-glm = "0.18"

# Async runtime for background loading
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"                                        # Rusty Object Notation
typetag = "0.2"                                    # Polymorphic serialization

# Immediate Mode GUI (latest version with custom Vulkano integration)
egui = "0.33"

# Physics Engine (Rapier 3D)
rapier3d = "0.25"

# Profiling (Puffin core - custom egui integration will be implemented)
puffin = "0.19"

# Tracy profiler integration (optional - build with --features tracy)
tracy-client = { version = "0.17", optional = true, default-features = false, features = ["enable", "manual-lifetime"] }

# Docking layout system for egui (editor panels)
egui_dock = { version = "0.18", features = ["serde"] }

# Clipboard support
arboard = "3.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
