[workspace]
members = [
    "engine",
    "game_shared",
    "game_client",
    "tools/pak_tool",
]
resolver = "2"

[workspace.dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
nalgebra-glm = "0.18"
log = "0.4"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true

[profile.shipping]
inherits = "release"
strip = true
codegen-units = 1
panic = "abort"

[patch.crates-io]
emath = { path = "crates/emath-patched" }
transform-gizmo = { path = "crates/transform-gizmo-fork/crates/transform-gizmo" }
transform-gizmo-egui = { path = "crates/transform-gizmo-fork/crates/transform-gizmo-egui" }
